# gym-balletenv

./: README.md  pyproject.toml  setup.py
docs/superpowers/specs/: 2026-03-28-easy-mode-bw-redesign.md
gym_balletenv/: __init__.py  setup.py
gym_balletenv/envs/: __init__.py  ballet_environment.py  ballet_environment_core.py  ballet_environment_test.py  batched_ballet_environment.py  batched_ballet_environment_test.py
gym_balletenv/wrappers/: __init__.py  gray_scale_observation.py  onehot_language.py  record_video.py  transpose_observation.py
